// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> iconFix renders an \`preIconFix and sufIconFix\` component  1`] = `
<span
  className="code-ui-input-allIconFix"
  onClick={[Function]}
>
  <span
    className="code-ui-input-icon"
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M512 160c-123.36 0-224 100.64-224 224 0 77.12 39.36 145.6 99.008 186.016C272.864 618.976 192 732.256 192 864h64c0-141.76 114.24-256 256-256s256 114.24 256 256h64c0-131.744-80.864-244.992-195.008-294.016A224.768 224.768 0 00736 384c0-123.36-100.64-224-224-224zm0 64c88.736 0 160 71.264 160 160s-71.264 160-160 160-160-71.264-160-160 71.264-160 160-160z"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前/后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M785.7 360.1H724v-75.4c0-58.4-22.7-113.3-64-154.5-41.3-41.3-96.2-64-154.5-64s-113.3 22.7-154.5 64c-41.3 41.3-64 96.2-64 154.5v75.4h-61.8c-56.1 0-101.8 45.7-101.8 101.8v396.6c0 56.1 45.7 101.8 101.8 101.8h560.7c56.1 0 101.8-45.7 101.8-101.8V461.9c-.1-56.2-45.8-101.8-102-101.8zm-434.8-75.4c0-85.2 69.3-154.6 154.6-154.6S660 199.5 660 284.7v75.4H350.9v-75.4zm472.7 573.8c0 20.9-17 37.8-37.8 37.8H225.1c-20.9 0-37.8-17-37.8-37.8V461.9c0-20.9 17-37.8 37.8-37.8h560.7c20.9 0 37.8 17 37.8 37.8v396.6z"
      />
      <path
        d="M505.4 566.3c-17.7 0-32 14.3-32 32v123.8c0 17.7 14.3 32 32 32s32-14.3 32-32V598.3c0-17.7-14.3-32-32-32z"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> iconFix renders an \`preIconFix\` component  1`] = `
<span
  className="code-ui-input-preIconFix"
>
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M512 160c-123.36 0-224 100.64-224 224 0 77.12 39.36 145.6 99.008 186.016C272.864 618.976 192 732.256 192 864h64c0-141.76 114.24-256 256-256s256 114.24 256 256h64c0-131.744-80.864-244.992-195.008-294.016A224.768 224.768 0 00736 384c0-123.36-100.64-224-224-224zm0 64c88.736 0 160 71.264 160 160s-71.264 160-160 160-160-71.264-160-160 71.264-160 160-160z"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前置Icon"
    type="text"
  />
</span>
`;

exports[`<Input/> iconFix renders an \`sufIconFix\` component  1`] = `
<span
  className="code-ui-input-sufIconFix"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M785.7 360.1H724v-75.4c0-58.4-22.7-113.3-64-154.5-41.3-41.3-96.2-64-154.5-64s-113.3 22.7-154.5 64c-41.3 41.3-64 96.2-64 154.5v75.4h-61.8c-56.1 0-101.8 45.7-101.8 101.8v396.6c0 56.1 45.7 101.8 101.8 101.8h560.7c56.1 0 101.8-45.7 101.8-101.8V461.9c-.1-56.2-45.8-101.8-102-101.8zm-434.8-75.4c0-85.2 69.3-154.6 154.6-154.6S660 199.5 660 284.7v75.4H350.9v-75.4zm472.7 573.8c0 20.9-17 37.8-37.8 37.8H225.1c-20.9 0-37.8-17-37.8-37.8V461.9c0-20.9 17-37.8 37.8-37.8h560.7c20.9 0 37.8 17 37.8 37.8v396.6z"
      />
      <path
        d="M505.4 566.3c-17.7 0-32 14.3-32 32v123.8c0 17.7 14.3 32 32 32s32-14.3 32-32V598.3c0-17.7-14.3-32-32-32z"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render iconFix Disabled renders an \`preIconFix Disabled\` component  1`] = `
<span
  className="code-ui-input-preIconFix code-ui-input-iconDisabled"
>
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M512 160c-123.36 0-224 100.64-224 224 0 77.12 39.36 145.6 99.008 186.016C272.864 618.976 192 732.256 192 864h64c0-141.76 114.24-256 256-256s256 114.24 256 256h64c0-131.744-80.864-244.992-195.008-294.016A224.768 224.768 0 00736 384c0-123.36-100.64-224-224-224zm0 64c88.736 0 160 71.264 160 160s-71.264 160-160 160-160-71.264-160-160 71.264-160 160-160z"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前置Icon"
    type="text"
  />
</span>
`;

exports[`<Input/> status render iconFix Disabled renders an \`preIconFix and sufIconFix Disabled\` component  1`] = `
<span
  className="code-ui-input-allIconFix code-ui-input-iconDisabled"
  onClick={[Function]}
>
  <span
    className="code-ui-input-icon"
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M512 160c-123.36 0-224 100.64-224 224 0 77.12 39.36 145.6 99.008 186.016C272.864 618.976 192 732.256 192 864h64c0-141.76 114.24-256 256-256s256 114.24 256 256h64c0-131.744-80.864-244.992-195.008-294.016A224.768 224.768 0 00736 384c0-123.36-100.64-224-224-224zm0 64c88.736 0 160 71.264 160 160s-71.264 160-160 160-160-71.264-160-160 71.264-160 160-160z"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前/后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M785.7 360.1H724v-75.4c0-58.4-22.7-113.3-64-154.5-41.3-41.3-96.2-64-154.5-64s-113.3 22.7-154.5 64c-41.3 41.3-64 96.2-64 154.5v75.4h-61.8c-56.1 0-101.8 45.7-101.8 101.8v396.6c0 56.1 45.7 101.8 101.8 101.8h560.7c56.1 0 101.8-45.7 101.8-101.8V461.9c-.1-56.2-45.8-101.8-102-101.8zm-434.8-75.4c0-85.2 69.3-154.6 154.6-154.6S660 199.5 660 284.7v75.4H350.9v-75.4zm472.7 573.8c0 20.9-17 37.8-37.8 37.8H225.1c-20.9 0-37.8-17-37.8-37.8V461.9c0-20.9 17-37.8 37.8-37.8h560.7c20.9 0 37.8 17 37.8 37.8v396.6z"
      />
      <path
        d="M505.4 566.3c-17.7 0-32 14.3-32 32v123.8c0 17.7 14.3 32 32 32s32-14.3 32-32V598.3c0-17.7-14.3-32-32-32z"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render iconFix Disabled renders an \`sufIconFix Disabled\` component  1`] = `
<span
  className="code-ui-input-sufIconFix code-ui-input-iconDisabled"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M785.7 360.1H724v-75.4c0-58.4-22.7-113.3-64-154.5-41.3-41.3-96.2-64-154.5-64s-113.3 22.7-154.5 64c-41.3 41.3-64 96.2-64 154.5v75.4h-61.8c-56.1 0-101.8 45.7-101.8 101.8v396.6c0 56.1 45.7 101.8 101.8 101.8h560.7c56.1 0 101.8-45.7 101.8-101.8V461.9c-.1-56.2-45.8-101.8-102-101.8zm-434.8-75.4c0-85.2 69.3-154.6 154.6-154.6S660 199.5 660 284.7v75.4H350.9v-75.4zm472.7 573.8c0 20.9-17 37.8-37.8 37.8H225.1c-20.9 0-37.8-17-37.8-37.8V461.9c0-20.9 17-37.8 37.8-37.8h560.7c20.9 0 37.8 17 37.8 37.8v396.6z"
      />
      <path
        d="M505.4 566.3c-17.7 0-32 14.3-32 32v123.8c0 17.7 14.3 32 32 32s32-14.3 32-32V598.3c0-17.7-14.3-32-32-32z"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render iconFix Error renders an \`preIconFix Error\` component  1`] = `
<span
  className="code-ui-input-preIconFix code-ui-input-iconError"
>
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M512 160c-123.36 0-224 100.64-224 224 0 77.12 39.36 145.6 99.008 186.016C272.864 618.976 192 732.256 192 864h64c0-141.76 114.24-256 256-256s256 114.24 256 256h64c0-131.744-80.864-244.992-195.008-294.016A224.768 224.768 0 00736 384c0-123.36-100.64-224-224-224zm0 64c88.736 0 160 71.264 160 160s-71.264 160-160 160-160-71.264-160-160 71.264-160 160-160z"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前置Icon"
    type="text"
  />
</span>
`;

exports[`<Input/> status render iconFix Error renders an \`preIconFix and sufIconFix Error\` component  1`] = `
<span
  className="code-ui-input-allIconFix code-ui-input-iconError"
  onClick={[Function]}
>
  <span
    className="code-ui-input-icon"
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M512 160c-123.36 0-224 100.64-224 224 0 77.12 39.36 145.6 99.008 186.016C272.864 618.976 192 732.256 192 864h64c0-141.76 114.24-256 256-256s256 114.24 256 256h64c0-131.744-80.864-244.992-195.008-294.016A224.768 224.768 0 00736 384c0-123.36-100.64-224-224-224zm0 64c88.736 0 160 71.264 160 160s-71.264 160-160 160-160-71.264-160-160 71.264-160 160-160z"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前/后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M785.7 360.1H724v-75.4c0-58.4-22.7-113.3-64-154.5-41.3-41.3-96.2-64-154.5-64s-113.3 22.7-154.5 64c-41.3 41.3-64 96.2-64 154.5v75.4h-61.8c-56.1 0-101.8 45.7-101.8 101.8v396.6c0 56.1 45.7 101.8 101.8 101.8h560.7c56.1 0 101.8-45.7 101.8-101.8V461.9c-.1-56.2-45.8-101.8-102-101.8zm-434.8-75.4c0-85.2 69.3-154.6 154.6-154.6S660 199.5 660 284.7v75.4H350.9v-75.4zm472.7 573.8c0 20.9-17 37.8-37.8 37.8H225.1c-20.9 0-37.8-17-37.8-37.8V461.9c0-20.9 17-37.8 37.8-37.8h560.7c20.9 0 37.8 17 37.8 37.8v396.6z"
      />
      <path
        d="M505.4 566.3c-17.7 0-32 14.3-32 32v123.8c0 17.7 14.3 32 32 32s32-14.3 32-32V598.3c0-17.7-14.3-32-32-32z"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render iconFix Error renders an \`sufIconFix Error\` component  1`] = `
<span
  className="code-ui-input-sufIconFix code-ui-input-iconError"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M785.7 360.1H724v-75.4c0-58.4-22.7-113.3-64-154.5-41.3-41.3-96.2-64-154.5-64s-113.3 22.7-154.5 64c-41.3 41.3-64 96.2-64 154.5v75.4h-61.8c-56.1 0-101.8 45.7-101.8 101.8v396.6c0 56.1 45.7 101.8 101.8 101.8h560.7c56.1 0 101.8-45.7 101.8-101.8V461.9c-.1-56.2-45.8-101.8-102-101.8zm-434.8-75.4c0-85.2 69.3-154.6 154.6-154.6S660 199.5 660 284.7v75.4H350.9v-75.4zm472.7 573.8c0 20.9-17 37.8-37.8 37.8H225.1c-20.9 0-37.8-17-37.8-37.8V461.9c0-20.9 17-37.8 37.8-37.8h560.7c20.9 0 37.8 17 37.8 37.8v396.6z"
      />
      <path
        d="M505.4 566.3c-17.7 0-32 14.3-32 32v123.8c0 17.7 14.3 32 32 32s32-14.3 32-32V598.3c0-17.7-14.3-32-32-32z"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render strFix Disabled renders an \`preStrFix Disabled\` component  1`] = `
<span
  className="code-ui-input-preStrFix code-ui-input-strDisabled"
>
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    http://
  </div>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="固定文字块 Error"
    type="text"
  />
</span>
`;

exports[`<Input/> status render strFix Disabled renders an \`preStrFix and sufStrFix Disabled\` component  1`] = `
<span
  className="code-ui-input-allStrFix code-ui-input-strDisabled"
  onClick={[Function]}
>
  <span
    className="code-ui-input-str"
  >
    http://
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="baidu"
    type="text"
  />
  <span
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </span>
</span>
`;

exports[`<Input/> status render strFix Disabled renders an \`sufStrFix Disabled\` component  1`] = `
<span
  className="code-ui-input-sufStrFix code-ui-input-strDisabled"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="http://baidu"
    type="text"
  />
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </div>
</span>
`;

exports[`<Input/> status render strFix Error renders an \`preStrFix Error\` component  1`] = `
<span
  className="code-ui-input-preStrFix code-ui-input-strError"
>
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    http://
  </div>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="固定文字块 Error"
    type="text"
  />
</span>
`;

exports[`<Input/> status render strFix Error renders an \`preStrFix and sufStrFix Error\` component  1`] = `
<span
  className="code-ui-input-allStrFix code-ui-input-strError"
  onClick={[Function]}
>
  <span
    className="code-ui-input-str"
  >
    http://
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="baidu"
    type="text"
  />
  <span
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </span>
</span>
`;

exports[`<Input/> status render strFix Error renders an \`sufStrFix Error\` component  1`] = `
<span
  className="code-ui-input-sufStrFix code-ui-input-strError"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="http://baidu"
    type="text"
  />
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </div>
</span>
`;

exports[`<Input/> strFix renders an \`preStrFix and sufStrFix\` component  1`] = `
<span
  className="code-ui-input-allStrFix"
  onClick={[Function]}
>
  <span
    className="code-ui-input-str"
  >
    http://
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="baidu"
    type="text"
  />
  <span
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </span>
</span>
`;

exports[`<Input/> strFix renders an \`preStrFix\` component  1`] = `
<span
  className="code-ui-input-preStrFix"
>
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    http://
  </div>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="baidu.com"
    type="text"
  />
</span>
`;

exports[`<Input/> strFix renders an \`sufStrFix\` component  1`] = `
<span
  className="code-ui-input-sufStrFix"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="http://baidu"
    type="text"
  />
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </div>
</span>
`;

exports[`<Input/> type renders an \`type=number\` component 1`] = `
<input
  className="code-ui-input-inputLabel"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="number"
  type="number"
/>
`;

exports[`<Input/> type renders an \`type=password\` component 1`] = `
<input
  className="code-ui-input-inputLabel"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="password"
  type="password"
/>
`;

exports[`<Input/> type renders an \`type=text\` component 1`] = `
<input
  className="code-ui-input-inputLabel"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="text"
  type="text"
/>
`;
